[package]
name = "bgstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.4"
axum-debug = "0.3"
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }